8-NCALTargetGroup.tf
resource "aws_lb_target_group" "NCal_tg" {
  name     = "NCal-target-group"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.NCal.id
  target_type = "instance"

  health_check {
    enabled             = true
    interval            = 30
    path                = "/"
    protocol            = "HTTP"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    timeout             = 5
    matcher             = "200"
  }

  tags = {
    Name    = "NCalTargetGroup"
    Service = "NCal1"
    Owner   = "Deuce"
    Project = "Ncal1"
  }
}

resource "aws_lb_target_group" "NCal_tg_443" {
  name     = "NCaltg443"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.NCal.id
  target_type = "instance"

  health_check {
    enabled             = true
    interval            = 30
    path                = "/"
    protocol            = "HTTP"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    timeout             = 5
    matcher             = "200"
  }

  tags = {
    Name    = "NCal_tg_443"
    Service = "NCal2"
    Owner   = "Deuce"
    Project = "NCal2"
  }
}
